fixed main background overflow hidden bug

--- a/app/assets/stylesheets/pages/_devise_new.scss
+++ b/app/assets/stylesheets/pages/_devise_new.scss
@@ -129,7 +129,7 @@ label {
 
   .main-background {
     height: auto;
-    overflow: visible !important;
+
   }
 
 }
