--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -8,7 +8,7 @@
 .main-background {
   // background: linear-gradient(180deg, rgba(165, 47, 255, 1) 0%, rgba(93, 75, 242, 1) 100%);
   background: linear-gradient(180deg, #721eb2 0%, #30229e 100%);
-  overflow: hidden;
+
 }
 
 .white-rectangle {
