--- a/app/assets/stylesheets/pages/_v2_home.scss
+++ b/app/assets/stylesheets/pages/_v2_home.scss
@@ -115,7 +115,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: #f8fff1;
+  background-color: white;
   background-clip: border-box;
   border-radius: 10px;
   list-style: none;
